--- a/app/src/main/res/layout/activity_cartpage.xml
+++ b/app/src/main/res/layout/activity_cartpage.xml
@@ -67,10 +67,37 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:scrollbars="vertical"/>
+
+           <LinearLayout
+               android:layout_width="match_parent"
+               android:layout_height="wrap_content"
+               android:orientation="horizontal">
+
+               <TextView
+                   android:layout_width="wrap_content"
+                   android:layout_height="wrap_content"
+                   android:text="Items Total:"
+                   android:textStyle="bold"
+                   android:textColor="@color/black"
+                   android:textSize="25dp"
+                   android:paddingLeft="5dp"
+                   app:layout_constraintTop_toBottomOf="@id/cartpagesv"
+                   />
+
+               <TextView
+                   android:id="@+id/tvitemstotalprice"
+                   android:layout_width="wrap_content"
+                   android:layout_height="wrap_content"
+                   android:text="$0"
+                   android:textColor="@color/black"
+                   android:textStyle="bold"
+                   android:textSize="20dp"
+                   android:paddingLeft="260dp"/>
+
+           </LinearLayout>
+
         </LinearLayout>
-
     </androidx.core.widget.NestedScrollView>
-
     <LinearLayout
         android:id="@+id/cartconfirm"
         android:layout_width="match_parent"
