--- a/app/src/main/res/layout/activity_checkout_page.xml
+++ b/app/src/main/res/layout/activity_checkout_page.xml
@@ -174,52 +174,64 @@
 
         <ImageButton
             android:id="@+id/home"
-            android:layout_width="90dp"
+            android:layout_width="0dp"
             android:layout_height="80dp"
-            android:padding="20dp"
             android:layout_marginLeft="10dp"
-            app:srcCompat="@drawable/home"
-            android:scaleType="fitCenter"
+            android:layout_weight="1"
             android:adjustViewBounds="true"
             android:background="@android:color/transparent"
-            android:contentDescription="Pasta Image" />
+            android:padding="20dp"
+            android:scaleType="fitCenter"
+            app:srcCompat="@drawable/home"
+            android:contentDescription="home button"/>
 
         <ImageButton
             android:id="@+id/order"
-            android:layout_width="90dp"
+            android:layout_width="0dp"
             android:layout_height="80dp"
-            android:padding="20dp"
             android:layout_marginLeft="10dp"
-            app:srcCompat="@drawable/order"
-            android:scaleType="fitCenter"
-            android:adjustViewBounds="true"
+            android:layout_weight="1"
             android:background="@android:color/transparent"
-            android:contentDescription="order Image" />
+            android:padding="20dp"
+            android:scaleType="fitCenter"
+            app:srcCompat="@drawable/order"
+            android:contentDescription="order button"/>
 
         <ImageButton
             android:id="@+id/favourites"
-            android:layout_width="90dp"
+            android:layout_width="0dp"
             android:layout_height="80dp"
-            android:padding="20dp"
             android:layout_marginLeft="10dp"
-            app:srcCompat="@drawable/favourite"
-            android:scaleType="fitCenter"
-            android:adjustViewBounds="true"
+            android:layout_weight="1"
             android:background="@android:color/transparent"
-            android:contentDescription="favourite Image" />
+            android:padding="20dp"
+            android:scaleType="fitCenter"
+            app:srcCompat="@drawable/favourite"
+            android:contentDescription="favorites button"/>
+
+        <ImageButton
+            android:id="@+id/cart_button"
+            android:layout_width="0dp"
+            android:layout_height="80dp"
+            android:layout_marginLeft="10dp"
+            android:layout_weight="1"
+            android:background="@android:color/transparent"
+            android:padding="23dp"
+            android:scaleType="fitCenter"
+            app:srcCompat="@drawable/shoppingcartimg"
+            android:contentDescription="cart button"/>
 
         <ImageButton
             android:id="@+id/account"
-            android:layout_width="90dp"
+            android:layout_width="0dp"
             android:layout_height="80dp"
-            android:padding="20dp"
-            android:layout_marginRight="10dp"
-            app:srcCompat="@drawable/account"
-            android:scaleType="fitCenter"
-            android:adjustViewBounds="true"
+            android:layout_marginLeft="10dp"
+            android:layout_weight="1"
             android:background="@android:color/transparent"
-            android:contentDescription="account Image" />
+            android:padding="20dp"
+            android:scaleType="fitCenter"
+            app:srcCompat="@drawable/account"
+            android:contentDescription="account button"/>
 
     </LinearLayout>
-
 </androidx.constraintlayout.widget.ConstraintLayout>
