--- a/app/src/main/res/layout/activity_cartpage.xml
+++ b/app/src/main/res/layout/activity_cartpage.xml
@@ -39,11 +39,10 @@
             android:layout_height="wrap_content"
             android:text="Cart"
             app:layout_constraintTop_toTopOf="parent"
-
             app:layout_constraintStart_toEndOf="@id/crossicon"
             android:layout_marginTop="26dp"
-
             android:layout_marginLeft="30dp"
+            android:layout_marginRight="30dp"
             android:gravity="center"
             android:textSize="20sp"
             android:textColor="@color/black"
