--- a/app/src/main/res/layout/custom_cart_item.xml
+++ b/app/src/main/res/layout/custom_cart_item.xml
@@ -6,6 +6,7 @@
     android:orientation="vertical"
     android:padding="0dp">
 
+    <!-- This page is how the cardview would look like in cart page recyclerview -->
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -43,6 +44,7 @@
                     android:paddingTop="8dp"
                     />
 
+                <!-- To display the price of 1 of the specific item -->
                 <TextView
                     android:id="@+id/tvcartPrice"
                     android:layout_width="match_parent"
@@ -52,6 +54,7 @@
                     android:paddingTop="4dp"
                     android:paddingBottom="10dp"/>
 
+                <!-- For + - button to increase/decrease item that is in cart page -->
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -98,7 +101,7 @@
                 </LinearLayout>
 
 
-
+                <!-- To display the total price for the total specific item -->
                 <TextView
                     android:id="@+id/tvtotalpriceforitem"
                     android:layout_width="wrap_content"
