--- a/app/src/main/res/layout/productpage.xml
+++ b/app/src/main/res/layout/productpage.xml
@@ -11,14 +11,12 @@
     <!-- All Restaurants Section -->
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/allRestaurantsLayout"
-
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/background"
         android:padding="0dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-
         app:layout_constraintEnd_toEndOf="parent">
 
 
@@ -37,7 +35,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
 
-
+        <!-- For filter function -->
         <androidx.cardview.widget.CardView
             android:id="@+id/filtercard"
             android:layout_width="0dp"
@@ -136,7 +134,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
 
-
+        <!-- For home page navigation -->
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -164,6 +162,7 @@
                 android:textSize="12sp" />
         </LinearLayout>
 
+        <!-- For points page navigation -->
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -191,7 +190,7 @@
                 android:textSize="12sp" />
         </LinearLayout>
 
-
+        <!-- For cart page navigation -->
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -219,6 +218,8 @@
                 android:text="Cart"
                 android:textSize="12sp" />
         </LinearLayout>
+
+        <!-- For account/profile page navigation -->
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
