--- a/app/src/main/res/layout/activity_register_page.xml
+++ b/app/src/main/res/layout/activity_register_page.xml
@@ -119,6 +119,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="70dp"
+        android:layout_marginLeft="10dp"
         android:layout_marginRight="80dp"
         android:text="Log In Here!"
         android:textColor="#03A9F4"
