--- a/app/src/main/res/layout/activity_payment_method.xml
+++ b/app/src/main/res/layout/activity_payment_method.xml
@@ -71,6 +71,7 @@
         android:layout_height="wrap_content"
         android:enabled="false"
         android:text="Pay"
+        android:backgroundTint="@color/orange"
         app:layout_constraintTop_toBottomOf="@id/payment_method_group"
         app:layout_constraintStart_toStartOf="parent"
         android:layout_marginStart="60dp"
@@ -81,6 +82,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Cancel"
+        android:backgroundTint="@color/orange"
         app:layout_constraintTop_toBottomOf="@id/payment_method_group"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginEnd="60dp"
