--- a/app/src/main/res/layout/activity_points_page.xml
+++ b/app/src/main/res/layout/activity_points_page.xml
@@ -87,6 +87,7 @@
         android:layout_height="wrap_content"
         android:text="Redeem $5 for 100 Points"
         android:layout_margin="10dp"
+        android:backgroundTint="@color/orange"
         app:layout_constraintTop_toBottomOf="@id/redeemTitle"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
@@ -97,6 +98,7 @@
         android:layout_height="wrap_content"
         android:text="Redeem $10 for 200 Points"
         android:layout_margin="10dp"
+        android:backgroundTint="@color/orange"
         app:layout_constraintTop_toBottomOf="@id/redeemButton"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
@@ -107,6 +109,7 @@
         android:layout_height="wrap_content"
         android:text="Redeem $20 for 350 Points"
         android:layout_margin="10dp"
+        android:backgroundTint="@color/orange"
         app:layout_constraintTop_toBottomOf="@id/redeemButton2"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
