--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,9 +2,8 @@
     <!-- Base application theme. -->
     <style name="Base.Theme.MAD_P01_Team4" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your dark theme here. -->
-        <item name="colorPrimary">@android:color/white</item>
-        <item name="colorPrimaryVariant">@android:color/white</item>
-        <item name="colorOnPrimary">@android:color/black</item>
+
+        <item name="colorPrimary">@android:color/black</item>
         <item name="android:windowFullscreen">true</item>
     </style>
 
