Added GPS / updated ProfilePage

--- a/app/src/main/res/menu/drawer_items.xml
+++ b/app/src/main/res/menu/drawer_items.xml
@@ -51,6 +51,11 @@
         android:title="Account"
         android:icon="@drawable/account" />
 
+    <item
+        android:id="@+id/navMap"
+        android:title="Cafe Location"
+        android:icon="@drawable/map_icon" />
+
     </group>
 
 
