changing ui of product page

--- a/app/src/main/res/layout/dialog_food_detail.xml
+++ b/app/src/main/res/layout/dialog_food_detail.xml
@@ -10,7 +10,7 @@
         android:id="@+id/view"
         android:layout_width="wrap_content"
         android:layout_height="500dp"
-        android:background="@color/green" />
+        android:background="@color/orange" />
 
 
 
