--- a/app/src/main/res/layout/productpage.xml
+++ b/app/src/main/res/layout/productpage.xml
@@ -186,25 +186,22 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"/>
-
         </androidx.constraintlayout.widget.ConstraintLayout>
-
 
         <!-- RecyclerView for displaying all products -->
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/clallproduct"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
+            android:layout_height="wrap_content"
             app:layout_constraintTop_toBottomOf="@id/displayfilter"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/clpopularproduct"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent">
 
-            <LinearLayout
+            <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/allproductslayout"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
                 android:paddingTop="20dp"
                 android:paddingLeft="16dp"
                 app:layout_constraintTop_toTopOf="parent"
@@ -218,7 +215,10 @@
                     android:text="All Items"
                     android:textStyle="bold"
                     android:textSize="24sp"
-                    android:textColor="@color/black"/>
+                    android:textColor="@color/black"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"/>
 
                 <Button
                     android:id="@+id/viewallbutton"
@@ -227,20 +227,20 @@
                     android:text="View All"
                     android:background="@android:color/transparent"
                     android:textColor="@color/grey"
-                    android:layout_marginLeft="220dp"
                     android:textAllCaps="false"
                     android:padding="0dp"
                     android:minWidth="0dp"
                     android:minHeight="0dp"
-                    android:layout_gravity="center_vertical"
-                    />
-
-            </LinearLayout>
+                    android:layout_marginRight="15dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"/>
+            </androidx.constraintlayout.widget.ConstraintLayout>
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/productrecyclerView"
                 android:layout_width="0dp"
-                android:layout_height="0dp"
+                android:layout_height="wrap_content"
                 android:background="@color/background"
                 android:padding="10dp"
                 app:layout_constraintTop_toBottomOf="@id/allproductslayout"
@@ -249,6 +249,54 @@
                 app:layout_constraintEnd_toEndOf="parent"/>
         </androidx.constraintlayout.widget.ConstraintLayout>
 
+        <!-- RecyclerView for displaying popular products -->
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/clpopularproduct"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingTop="20dp"
+            android:paddingLeft="16dp"
+            app:layout_constraintTop_toBottomOf="@id/clallproduct"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent">
+
+            <TextView
+                android:id="@+id/tvpopularproduct"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Popular"
+                android:textStyle="bold"
+                android:textSize="24sp"
+                android:textColor="@color/black"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"/>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+        <!-- RecyclerView for displaying order again products -->
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/clorderagainproduct"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingTop="20dp"
+            android:paddingLeft="16dp"
+            app:layout_constraintTop_toBottomOf="@id/clpopularproduct"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent">
+
+            <TextView
+                android:id="@+id/tvorderagainproduct"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Order Again"
+                android:textStyle="bold"
+                android:textSize="24sp"
+                android:textColor="@color/black"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"/>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
         <!-- Floating Chatbot Button -->
         <FrameLayout
