--- a/app/src/main/res/layout/reciever_view.xml
+++ b/app/src/main/res/layout/reciever_view.xml
@@ -11,7 +11,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="40dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="40dp"
         android:orientation="horizontal">
 
         <androidx.cardview.widget.CardView
@@ -47,7 +47,8 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_margin="18dp"
-                android:text="Hello, I am Jeevak" />
+                android:textStyle="bold"
+                android:text="Hello, I am Chatbot" />
         </androidx.cardview.widget.CardView>
     </LinearLayout>
 
